--- a/client-react/package.json
+++ b/client-react/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@patternfly/react-log-viewer": "^5.1.0",
     "axios": "^1.6.5",
     "react": "^18.2.0",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3"
